# ros2_control_demos

./: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  admittance_controller.repos  codecov.yml  ros2_control_demos-not-released.jazzy.repos  ros2_control_demos-not-released.rolling.repos  ros2_control_demos.foxy.repos  ros2_control_demos.galactic.repos  ros2_control_demos.humble.repos  ros2_control_demos.iron.repos  ros2_control_demos.jazzy.repos  ros2_control_demos.kilted.repos  ros2_control_demos.repos  ros2_control_demos.rolling.repos  using_admittance_controller.md
6_dof_robot/: CMakeLists.txt  package.xml
6_dof_robot/launch/: view_6_dof_robot.py
6_dof_robot/rviz/: view_robot.rviz
6_dof_robot/urdf/: 6_dof_robot.urdf.xacro  ur.ros2_control.xacro
admittance_demo/: CMakeLists.txt  admittance_controller.repos  package.xml  using_admittance_controller.md
admittance_demo/config/: joint_limits_admittance.yaml
example_1/: CMakeLists.txt  README.md  README.rst  package.xml  ros2_control_demo_example_1.xml
example_1/description/: rrbot.ros2_control.xacro
example_1/doc/: understanding_ros2_control_rrbot_example1.md.md  userdoc.rst
example_1/hardware/: rrbot.cpp  rrbot.hpp
example_1/test/: test_rrbot_launch.py  test_rrbot_launch_cli_direct.py  test_urdf_xacro.py  test_view_robot_launch.py
example_10/: CMakeLists.txt  README.md  package.xml  ros2_control_demo_example_10.xml
example_10/controllers/: gpio_controller.cpp
example_10/doc/: userdoc.rst
example_10/hardware/: rrbot.cpp
example_10/test/: test_rrbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_12/: CMakeLists.txt  README.md  package.xml  passthrough_controller.xml  ros2_control_demo_example_12.xml
example_12/doc/: userdoc.rst
example_12/hardware/: rrbot.cpp
example_12/test/: test_rrbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_13/: CMakeLists.txt  README.md  package.xml
example_13/doc/: userdoc.rst
example_13/test/: test_three_robots_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_15/: CMakeLists.txt  README.md  package.xml
example_15/doc/: userdoc.rst
example_15/test/: test_multi_controller_manager_launch.py  test_rrbot_namespace_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_17/: CMakeLists.txt  README.md  package.xml  ros2_control_demo_example_17.xml
example_17/doc/: userdoc.rst
example_17/hardware/: rrbot.cpp
example_17/test/: test_diffbot_launch.py  test_rrbot_launch.py  test_rrbot_launch_cli_direct.py  test_urdf_xacro.py  test_view_robot_launch.py
example_18/: CMakeLists.txt  README.md  motion_controller.xml  package.xml  ros2_control_demo_example_18.xml
example_18/description/: README.md
example_18/doc/: design.rst  onnx_runtime.rst  userdoc.rst
example_18/hardware/: duck_mini_mujoco_system_interface.cpp  rrbot.cpp
example_18/msg/: VelocityCommandWithHead.msg
example_18/onnx_model/: open_duck_mini_policy.onnx  open_duck_mini_policy.onnx.metadata.json
example_18/test/: test_example_18_mujoco_launch.py  test_rrbot_launch.py  test_rrbot_launch_cli_direct.py  test_urdf_xacro.py  test_view_robot_launch.py
example_18_motion_controller_msgs/: CMakeLists.txt  package.xml
example_19/: CMakeLists.txt  README.md  package.xml
example_19/doc/: userdoc.rst
example_19/test/: test_diffbot_example_16_launch.py  test_diffbot_example_2_16_launch_16.py  test_diffbot_example_2_16_launch_2.py  test_diffbot_example_2_launch.py
example_2/: CMakeLists.txt  README.md  README.rst  package.xml  ros2_control_demo_example_2.xml  ros2_control_demo_hardware.xml
example_2/doc/: userdoc.rst
example_2/hardware/: diffbot_system.cpp  diffbot_system.hpp  mavlink_subscriber_node.cpp  pwm_command_node.cpp  visibility_control.h
example_2/test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_4/: CMakeLists.txt  README.md  README.rst  package.xml  ros2_control_demo_example_4.xml
example_4/doc/: userdoc.rst
example_4/hardware/: rrbot_system_with_sensor.cpp
example_4/test/: test_rrbot_system_with_sensor_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_5/: CMakeLists.txt  README.md  README.rst  package.xml  ros2_control_demo_example_5.xml
example_5/doc/: userdoc.rst
example_5/hardware/: external_rrbot_force_torque_sensor.cpp  rrbot.cpp
example_5/test/: test_rrbot_system_with_external_sensor_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_6/: CMakeLists.txt  README.md  README.rst  package.xml  ros2_control_demo_example_6.xml
example_6/doc/: userdoc.rst
example_6/hardware/: rrbot_actuator.cpp
example_6/test/: test_rrbot_modular_actuators_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_7/: CMakeLists.txt  README.md  package.xml  ros2_control_demo_example_7.xml
example_7/controller/: r6bot_controller.cpp
example_7/doc/: userdoc.rst
example_7/hardware/: r6bot_hardware.cpp
example_7/reference_generator/: send_trajectory.cpp
example_7/test/: test_r6bot_controller_launch.py  test_send_trajectory_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_8/: CMakeLists.txt  README.md  README.rst  package.xml  ros2_control_demo_example_8.xml
example_8/doc/: userdoc.rst
example_8/hardware/: rrbot_transmissions_system_position_only.cpp
example_8/test/: test_rrbot_transmissions_system_position_only_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
robot_6_dof/: CMakeLists.txt  README.md  package.xml  robot_6_dof_controller_plugin_description.xml  robot_6_dof_hardware_plugin_description.xml
robot_6_dof/config/: kinematics.yaml  robot_6_dof.yaml
robot_6_dof/hardware_driver/: CMakeLists.txt
ros2_control_core/: CMakeLists.txt  package.xml
ros2_control_demo_bringup/: CMakeLists.txt  package.xml
ros2_control_demo_communication_gazebo/: CMakeLists.txt  package.xml
ros2_control_demo_communication_headless/: CMakeLists.txt  package.xml  ros2_control_demo_communication_headless.xml
ros2_control_demo_description/: CMakeLists.txt  package.xml
(+758 files in other folders)
