<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>admittance_demo</name>
  <version>0.2.0</version>
  <description>Admittance demonstration with a UR robot.</description>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>
  <maintainer email="denis@stoglrobotics.de">Dr.-Ing. Denis Štogl</maintainer>

  <author>Paul Gesel</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>admittance_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>kinematics_interface_kdl</exec_depend>
  <exec_depend>moveit_ros_control_interface</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
